# Copyright (c) 2023 The Catsxp Authors. All rights reserved. 

import("//catsxp/build/config.gni")
import("//catsxp/components/catsxp_ads/buildflags/buildflags.gni")
import("//catsxp/components/catsxp_rewards/core/buildflags/buildflags.gni")

assert(enable_catsxp_ads)
static_library("browser") {
  sources = [
    "component_updater/component_info.h",
    "component_updater/component_util.cc",
    "component_updater/component_util.h",
    "component_updater/resource_component.cc",
    "component_updater/resource_component.h",
    "component_updater/resource_component_observer.h",
    "component_updater/resource_component_registrar.cc",
    "component_updater/resource_component_registrar.h",
    "component_updater/resource_component_registrar_delegate.h",
    "component_updater/resource_info.h",
    "reminder/reminder_util.cc",
    "reminder/reminder_util.h",
  ]

  configs += [ "//build/config/compiler:wexit_time_destructors" ]

  deps = [
    "//base",
    "//catsxp/components/catsxp_component_updater/browser",
    "//catsxp/components/catsxp_policy:policy_initialization_waiter",
    "//catsxp/components/catsxp_rewards/core/buildflags",
    "//catsxp/components/l10n/common",
    "//catsxp/components/ntp_background_images/common",
    "//catsxp/components/p3a_utils",
    "//catsxp/components/time_period_storage",
    "//components/content_settings/core/browser",
    "//components/pref_registry",
    "//components/prefs",
    "//components/sessions",
    "//third_party/blink/public/common",
    "//ui/base/idle",
    "//url",
  ]

  public_deps = [
    "application_state",
    "//catsxp/components/catsxp_ads/core",
    "//catsxp/components/catsxp_ads/core/mojom",
    "//catsxp/components/services/bat_ads/public/interfaces:mojom",
    "//components/keyed_service/core",
    "//mojo/public/cpp/bindings",
  ]

  sources += [
    "ads_service_impl.cc",
    "ads_service_impl.h",
    "bat_ads_service_factory.h",
    "device_id/device_id.cc",
    "device_id/device_id.h",
    "tooltips/ads_tooltips_delegate.h",
  ]

  deps += [
    "//catsxp/common",
    "//components/history/core/browser",
    "//catsxp/components/resources:strings_grit",
    "//components/variations",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//net",
    "//ui/base",
  ]

  public_deps += [ "//catsxp/components/services/bat_ads/public/interfaces:mojom" ]

  if (enable_catsxp_rewards) {
    deps += [
      "//catsxp/components/catsxp_rewards/core/mojom",
      "//catsxp/components/catsxp_adaptive_captcha",
      "//catsxp/components/catsxp_rewards/content",
      "//catsxp/components/catsxp_rewards/core",
    ]
  }
}


source_set("test_support") {
  testonly = true

  sources = [
    "test/fake_ads_service_delegate.cc",
    "test/fake_ads_service_delegate.h",
    "test/fake_ads_tooltips_delegate.cc",
    "test/fake_ads_tooltips_delegate.h",
    "test/fake_bat_ads.cc",
    "test/fake_bat_ads.h",
    "test/fake_bat_ads_client_notifier.cc",
    "test/fake_bat_ads_client_notifier.h",
    "test/fake_bat_ads_service.cc",
    "test/fake_bat_ads_service.h",
    "test/fake_bat_ads_service_factory.cc",
    "test/fake_bat_ads_service_factory.h",
    "test/fake_device_id.cc",
    "test/fake_device_id.h",
    "test/fake_virtual_pref_provider_delegate.cc",
    "test/fake_virtual_pref_provider_delegate.h",
  ]

  deps = [
    ":browser",
    "//base",
    "//catsxp/components/catsxp_ads/core/mojom",
    "//catsxp/components/services/bat_ads/public/interfaces:mojom",
    "//components/prefs",
    "//mojo/public/cpp/bindings",
    "//testing/gmock",
    "//ui/base/idle",
    "//url",
  ]

  if (enable_catsxp_rewards) {
    sources += [
      "test/fake_rewards_service.cc",
      "test/fake_rewards_service.h",
    ]

    deps += [
      "//catsxp/components/catsxp_rewards/content",
      "//catsxp/components/catsxp_rewards/core/buildflags",
    ]
  }
}

source_set("unit_tests") {
  testonly = true

  sources = [
    "ads_service_impl_unittest.cc",
    "application_state/application_state_monitor_unittest.cc",
    "component_updater/resource_component_registrar_unittest.cc",
    "test/fake_component_updater_delegate.cc",
    "test/fake_component_updater_delegate.h",
    "test/mock_resource_component.cc",
    "test/mock_resource_component.h",
  ]

  deps = [
    ":test_support",
    "//base",
    "//base/test:test_support",
    "//catsxp/components/catsxp_ads/browser",
    "//catsxp/components/catsxp_ads/browser/application_state:test_support",
    "//catsxp/components/catsxp_ads/core",
    "//catsxp/components/catsxp_ads/core/public:headers",
    "//catsxp/components/catsxp_component_updater/browser",
    "//catsxp/components/catsxp_policy:policy_initialization_waiter",
    "//catsxp/components/catsxp_rewards/core",
    "//catsxp/components/catsxp_rewards/core:features",
    "//catsxp/components/catsxp_rewards/core/buildflags",
    "//catsxp/components/ntp_background_images/common",
    "//components/content_settings/core/browser",
    "//components/metrics:metrics_pref_names",
    "//components/prefs",
    "//components/prefs:test_support",
    "//components/variations",
    "//content/test:test_support",
    "//testing/gtest",
    "//ui/base/idle",
  ]

  if (enable_catsxp_rewards) {
    deps += [ "//catsxp/components/catsxp_rewards/content" ]
  }
}
